Added requirements versions
Just to make work Dependabot 😂 also reminds me to update that repo

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-pyrogram
-TgCrypto
-pyromod
-motor
-dnspython
-psutil
-pykeyboard
-aiohttp
-aiofiles
+pyrogram==1.4.16
+TgCrypto==1.2.3
+pyromod==1.5
+motor==2.5.1
+dnspython==2.2.1
+psutil==5.9.0
+pykeyboard==0.1.5
+aiohttp==3.8.1
+aiofiles==0.8.0
