--- a/.github/workflows/beta-auto-deploy.yml
+++ b/.github/workflows/beta-auto-deploy.yml
@@ -1,9 +1,11 @@
-name: Automatic deploy of beta branch
+name: Manual deploy of beta branch
 
 on:
-  push:
-    branches:
-      - beta
+  workflow_dispatch:
+#  push:
+#    branches:
+#      - beta
+# Uncomment the previous lines to enable the automatic deploy
 
 jobs:
   build:
