--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "Unzipper Bot [BETA VERSION]",
+    "name": "Unzipper Bot",
     "description": "A Telegram Bot to Extract Various Types Of Archives",
     "logo": "https://telegra.ph/file/426207477776ffa00519f.png",
     "keywords": [
