--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "Unzipper Bot [BETA VERSION]",
     "description": "A Telegram Bot to Extract Various Types Of Archives",
-    "logo": "https://telegra.ph/file/426207477776ffa00519f.png",
+    "logo": "https://telegra.ph/file/00e96e3c5dda1c9ab40da.jpg",
     "keywords": [
         "7z",
         "zip",
