--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "Unzipper Bot",
     "description": "A Telegram Bot to Extract Various Types Of Archives",
-    "logo": "https://telegra.ph/file/426207477776ffa00519f.png",
+    "logo": "https://telegra.ph/file/d4ba24682e030fc58613f.jpg",
     "keywords": [
         "7z",
         "zip",
@@ -68,7 +68,7 @@
   "formation": {
     "worker": {
       "quantity": 1,
-      "size": "free"
+      "size": "eco"
     }
   },
   "stack": "container"
