--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,10 +13,10 @@ name: "CodeQL"
 
 on:
 #  push:
-#    branches: [ master, beta ]
+#    branches: [ master ]
 #  pull_request:
 #    # The branches below must be a subset of the branches above
-#    branches: [ master, beta ]
+#    branches: [ master ]
   schedule:
     - cron: '0 4 * * 6'
   workflow_dispatch:
@@ -34,8 +34,6 @@ jobs:
       fail-fast: false
       matrix:
         language: [ 'python' ]
-        # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python', 'ruby' ]
-        # Learn more about CodeQL language support at https://git.io/codeql-language-support
 
     steps:
     - name: Checkout repository
