--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -17,8 +17,8 @@ on:
 #  pull_request:
 #    # The branches below must be a subset of the branches above
 #    branches: [ master ]
-  schedule:
-    - cron: '0 4 * * 6'
+#  schedule:
+#    - cron: '0 4 * * 6'
   workflow_dispatch:
 
 jobs:
