--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-pyrogram==2.0.106
-TgCrypto==1.2.5
-pyromod==2.0.0
-motor==3.3.0
+aiofiles==23.2.1
+aiohttp==3.8.5
+base58check==1.0.2
 dnspython==2.4.2
+gitdb==4.0.10
+GitPython==3.1.32
+motor==3.3.0
+Pillow==10.0.0
 psutil==5.9.5
 pykeyboard==0.1.5
-aiohttp==3.8.5
-aiofiles==23.2.1
-Pillow==10.0.0
+pyrogram==2.0.106
+pyromod==2.0.0
 requests==2.31.0
-GitPython==3.1.32
-gitdb==4.0.10
+TgCrypto==1.2.5
 unzip-http==0.4
