--- a/app.json
+++ b/app.json
@@ -36,6 +36,10 @@
         "LOGS_CHANNEL": {
             "description": "ID of a channel, can also be a group",
             "required": true
+        },
+        "SESSION_STRING": {
+            "description": "Session string for Premium uploads",
+            "required": false
         }
     },
     "addons": [],
