smol update - removed useless files and imports - updated the licence years - updated the bot's config files - added ffmpeg buildpack - updated runtime from 3.11.5 to 3.12.1 - tried fixing #30, we'll see - new feature : if you Upload all, you won't get hundreds of notifications ! Now the bot sends the files silently and send one notification when everything's uploaded - New password for testing archives. Hope you will like it :)

--- a/.restyled.yml
+++ b/.restyled.yml
@@ -3,7 +3,7 @@ exclude:
   - "unzipper/modules/ext_script/ext_helper.py"
   - "unzipper/modules/ext_script/up_helper.py"
 auto: false
-pull_requests: true
+pull_requests: false
 commit_template: |
   Restyled by ${restyler.name}
 statuses:
