--- a/app.json
+++ b/app.json
@@ -42,6 +42,9 @@
     "buildpacks": [
         {
             "url": "heroku/python"
+        },
+        {
+            "url": "https://github.com/HasibulKabir/heroku-buildpack-ffmpeg-ffprobe.git"
         }
     ],
     "formation": {
