--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,14 +1,20 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
-
 version: 2
 updates:
   - package-ecosystem: "pip"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "20:00"
+      timezone: "Europe/Paris"
     assignees:
       - "EDM115"
-    open-pull-requests-limit: 15
+    commit-message:
+      prefix: "[dependabot/pip] "
+      include: scope
+    labels:
+      - "dependabot/pip"
+    pull-request-branch-name:
+      separator: "/"
+    reviewers:
+      - "EDM115"
