--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
+custom: ["https://paypal.me/8EDM115", "https://www.buymeacoffee.com/edm115", "https://t.me/EDM115bots/698", "https://walad.link/edm115"]
 github: EDM115
-custom: ["https://paypal.me/8EDM115", "https://www.buymeacoffee.com/edm115", "https://t.me/EDM115bots/544", "https://edm115.shadd.eu.org/"]
