fix: 388ab714b3bbab5afb7daef308d8c9ed2e5d995b fr this time

--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -42,5 +42,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }},latest
+          tags: ${{ steps.meta.outputs.tags }},edm115/unzip-bot:latest,ghcr.io/${{ github.repository }}:latest
           labels: ${{ steps.meta.outputs.labels }}
