--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -28,6 +28,10 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Lowercase the repo name
+        run: |
+          echo "REPO_L=${GITHUB_REPOSITORY@L}" >> "${GITHUB_ENV}"
       
       - name: Extract metadata (tags, labels) for Docker
         id: meta
@@ -42,5 +46,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }},edm115/unzip-bot:latest,ghcr.io/${{ github.repository }}:latest
+          tags: ${{ steps.meta.outputs.tags }},edm115/unzip-bot:latest,ghcr.io/${REPO_L}:latest
           labels: ${{ steps.meta.outputs.labels }}
