--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -46,5 +46,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }},edm115/unzip-bot:latest,ghcr.io/${REPO_L}:latest
+          tags: ${{ steps.meta.outputs.tags }},edm115/unzip-bot:latest,ghcr.io/${{ env.REPO_L }}:latest
           labels: ${{ steps.meta.outputs.labels }}
