chore(docs): Describe v6.3.4

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
-custom: ["https://paypal.me/8EDM115", "https://www.buymeacoffee.com/edm115", "https://t.me/EDM115bots/698", "https://walad.link/edm115"]
+custom: ["https://paypal.me/8EDM115", "https://www.buymeacoffee.com/edm115", "https://t.me/EDM115bots/698"]
 github: EDM115
