chore(funding): display BMAC standalone

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,3 @@
-custom: ["https://paypal.me/8EDM115", "https://www.buymeacoffee.com/edm115", "https://t.me/EDM115bots/698"]
+buy_me_a_coffee: edm115
+custom: ["https://paypal.me/8EDM115", "https://t.me/EDM115bots/698"]
 github: EDM115
