chore: definitive version of the AUTHORS file

--- a/.github/workflows/authors.yml
+++ b/.github/workflows/authors.yml
@@ -1,9 +1,10 @@
 name: Update Authors
 
 on:
-  push:
-    branches:
-      - master
+  # push:
+    # branches:
+      # - master
+  workflow_dispatch:
 
 jobs:
   run:
