chore: consistency, switch to unzip-bot or unzipbot/unzip where not possible

--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
         "zip",
         "rar",
         "Telegram Bot",
-        "unzipper bot"
+        "unzip bot"
     ],
     "website": "https://edm115.dev/unzip",
     "repository": "https://github.com/EDM115/unzip-bot",
