fix: better Heroku integration, stops overriding start commands

--- a/app.json
+++ b/app.json
@@ -39,14 +39,7 @@
         }
     },
     "addons": [],
-    "buildpacks": [
-        {
-            "url": "heroku/python"
-        },
-        {
-            "url": "https://github.com/HasibulKabir/heroku-buildpack-ffmpeg-ffprobe.git"
-        }
-    ],
+    "buildpacks": [],
     "formation": {
         "worker": {
             "quantity": 1,
