fix(env): no need for quotation marks
especially with strings that gets directly parsed like MONGODB_URL

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_ID=
-API_HASH=""
+API_HASH=
 BOT_OWNER=
-BOT_TOKEN=""
-MONGODB_DBNAME="Unzipper_Bot"
-MONGODB_URL=""
+BOT_TOKEN=
+MONGODB_DBNAME=Unzipper_Bot
+MONGODB_URL=
 LOGS_CHANNEL=
